Size lasagna image and put a desciption under the image

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,18 @@
   </head>
   <body>
     <h1>Lasagna Recipe</h1>
+
+    <img
+      src="lasagna.webp"
+      alt="Lasagna picture"
+      height="300px"
+      width="500px"
+    />
+    <h6>Description</h6>
+    <p>
+      Making lasagna can be time-consuming, but the results are well worth the
+      wait. You'll find a detailed ingredient list and step-by-step instructions
+      in the recipe below, but let's go over the basics.
+    </p>
   </body>
 </html>
