--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -20,5 +20,39 @@
       wait. You'll find a detailed ingredient list and step-by-step instructions
       in the recipe below, but let's go over the basics.
     </p>
+
+    <h2>ingredients</h2>
+    <ul>
+      <li>
+        <strong>Meat:</strong> This super meaty lasagna has sweet Italian
+        sausage and lean ground beef.
+      </li>
+      <li>
+        <strong>Onion and garlic:</strong> An onion and two cloves of garlic are
+        cooked with the meat to add tons of flavor.
+      </li>
+      <li>
+        <strong>Tomato products:</strong> You'll need a can of crushed tomatoes,
+        two cans of tomato sauce, and two cans of tomato paste.
+      </li>
+      <li>
+        <strong>Sugar:</strong> Two tablespoons of white sugar add subtle
+        sweetness and enhance the flavor of the sauce.
+      </li>
+      <li>
+        <strong>Spices and seasonings:</strong> This lasagna recipe is flavored
+        with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel
+        seeds, and black pepper.
+      </li>
+      <li><strong>Lasagna noodles:</strong> Use store-bought</li>
+      <li>
+        <strong>Cheeses: </strong>Parmesan, mozzarella, and ricotta cheese make
+        this lasagna extra decadent.
+      </li>
+      <li>
+        <strong>Egg:</strong> An egg helps bind the ricotta so it doesn't ooze
+        out of the lasagna when you cut into it.
+      </li>
+    </ul>
   </body>
 </html>
