--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -54,5 +54,16 @@
         out of the lasagna when you cut into it.
       </li>
     </ul>
+
+    <h2>ingredients</h2>
+
+    <ol>
+      <li>Make the meat sauce.</li>
+      <li>Cook the noodles.</li>
+      <li>Make the ricotta mixture.</li>
+      <li>Layer the lasagna according to the recipe instructions.</li>
+      <li>Cover with foil and bake.</li>
+      <li>Let the lasagna rest before serving.</li>
+    </ol>
   </body>
 </html>
