Fixing the link (i have linked the chicken.webp image not the chicken.html)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Recipe Lasagna</a>
-    <a href="recipes/chicken.webp">Recipe Chicken</a>
+    <a href="recipes/chicken.html">Recipe Chicken</a>
   </body>
 </html>
