i have fixed the src for the chicken image

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -9,7 +9,7 @@
     <h1>Chicken Recipe</h1>
 
     <img
-      src="Chicken.webp"
+      src="chicken.webp"
       alt="Chicken picture"
       height="300px"
       width="500px"
