Modified the index.html file for having a css style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Recipe Lasagna</a>
-    <a href="recipes/chicken.html">Recipe Chicken</a>
+    <h1 class="home-links-title">Odin Recipes</h1>
+    <div>
+      <a href="recipes/lasagna.html">Recipe Lasagna</a>
+      <br />
+      <a href="recipes/chicken.html">Recipe Chicken</a>
+    </div>
   </body>
 </html>
