Modifying the files of the differents recipes (for including css style)

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -3,17 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Chicken Recipe</title>
   </head>
   <body>
-    <h1>Chicken Recipe</h1>
+    <h1 class="home-title">Chicken Recipe</h1>
 
-    <img
-      src="chicken.webp"
-      alt="Chicken picture"
-      height="300px"
-      width="500px"
-    />
+    <img src="chicken.webp" alt="Chicken picture" class="recipe-img" />
     <p>
       This butter chicken recipe, or chicken makhani, is one of my favorite
       Indian dishes. It features a full-flavored sauce that complements the
@@ -21,8 +17,8 @@
       cayenne. Serve with basmati rice and naan bread.
     </p>
 
-    <h2>ingredients</h2>
-    <ul>
+    <h2 class="secondaries-titles">ingredients</h2>
+    <ul class="list">
       <li>2 tablespoons peanut oil, divided</li>
 
       <li>1 shallot, finely chopped</li>
@@ -62,9 +58,9 @@
       <li>¼ cup water</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="secondaries-titles">Steps</h2>
 
-    <ol>
+    <ol class="list">
       <li>
         Heat 1 tablespoon oil in a large saucepan over medium-high heat. Sauté
         shallot and onion until soft and translucent, about 5 minutes.
