--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,25 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Lasagna Recipe</title>
   </head>
   <body>
-    <h1>Lasagna Recipe</h1>
+    <h1 class="home-title">Lasagna Recipe</h1>
 
-    <img
-      src="lasagna.webp"
-      alt="Lasagna picture"
-      height="300px"
-      width="500px"
-    />
+    <img src="lasagna.webp" alt="Lasagna picture" class="recipe-img" />
     <p>
       Making lasagna can be time-consuming, but the results are well worth the
       wait. You'll find a detailed ingredient list and step-by-step instructions
       in the recipe below, but let's go over the basics.
     </p>
 
-    <h2>ingredients</h2>
-    <ul>
+    <h2 class="secondaries-titles">ingredients</h2>
+    <ul class="list">
       <li>
         <strong>Meat:</strong> This super meaty lasagna has sweet Italian
         sausage and lean ground beef.
@@ -54,9 +50,9 @@
       </li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="secondaries-titles">Steps</h2>
 
-    <ol>
+    <ol class="list">
       <li>Make the meat sauce.</li>
       <li>Cook the noodles.</li>
       <li>Make the ricotta mixture.</li>
