Adding some styles : positionning differents elements of index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1 class="home-links-title">Odin Recipes</h1>
-    <div>
+    <div class="odin-recipes">
+      <h1 class="home-links-title">Odin Recipes</h1>
+    </div>
+
+    <div class="home-links">
       <a href="recipes/lasagna.html">Recipe Lasagna</a>
       <br />
       <a href="recipes/chicken.html">Recipe Chicken</a>
