using flexbox for centering and positionning some elements

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,9 +7,19 @@
     <title>Lasagna Recipe</title>
   </head>
   <body>
-    <h1 class="home-title">Lasagna Recipe</h1>
+    <div class="recipe">
+      <h1 class="home-title">Lasagna Recipe</h1>
+    </div>
 
-    <img src="lasagna.webp" alt="Lasagna picture" class="recipe-img" />
+    <div class="recipe-img">
+      <img
+        src="lasagna.webp"
+        alt="Lasagna picture"
+        height="300px"
+        width="600px"
+      />
+    </div>
+
     <p>
       Making lasagna can be time-consuming, but the results are well worth the
       wait. You'll find a detailed ingredient list and step-by-step instructions
