--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -7,9 +7,18 @@
     <title>Chicken Recipe</title>
   </head>
   <body>
-    <h1 class="home-title">Chicken Recipe</h1>
+    <div class="recipe">
+      <h1 class="home-title">Chicken Recipe</h1>
+    </div>
 
-    <img src="chicken.webp" alt="Chicken picture" class="recipe-img" />
+    <div class="recipe-img">
+      <img
+        src="chicken.webp"
+        alt="Chicken picture"
+        height="300px"
+        width="600px"
+      />
+    </div>
     <p>
       This butter chicken recipe, or chicken makhani, is one of my favorite
       Indian dishes. It features a full-flavored sauce that complements the
